--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,9 @@
     "node": ">=14.13.1"
   },
   "dependencies": {
+    "@shopify/shopify-api": "^7.2.0",
     "@shopify/shopify-app-express": "^2.1.1",
+    "@shopify/shopify-app-session-storage-mongodb": "^1.0.8",
     "@shopify/shopify-app-session-storage-sqlite": "^1.2.2",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
