--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
+    "graphql": "^16.6.0",
     "mongoose": "^7.1.1"
   },
   "author": "Mikey"
