--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,3 +1,3 @@
 # This file stores configurations for your Shopify app.
 
-scopes = "write_products,write_own_subscription_contracts,write_customers,write_orders,write_draft_orders"
+scopes = "write_products,write_own_subscription_contracts,write_customers,write_orders,write_draft_orders,read_inventory,write_inventory"
